# K-QA

./: LICENSE  README.md  dummy_res.json  pyproject.toml  run_eval.py
dataset/: NLI_medical_annotator.csv  questions.jsonl
dummy_exp/: dataset_statistics.csv  macro_results.json  reasoning.csv
evaluation/: metrics.py  utils.py
evaluation/prompts/: is_contradict.txt  is_entails.txt
